# ml-zoomcamp-2025-midterm-project

./: README.md  main.py  notebook.ipynb  notebook_aoe_data.ipynb  pyproject.toml
